--- a/templates/cart.html
+++ b/templates/cart.html
@@ -153,7 +153,7 @@
               </div>
               <br>
               <div style="display: flex;justify-content: center;">
-                <button class="buy_now"><a href="/" class="ahref">Home</a></button>
+                <button class="buy_now"><a href="{{url_for('index')}}" class="ahref">Home</a></button>
                 <button class="buy_now"><a href="/payment"></a>Pay now</a></button>
               </div>
             </div> 
