--- a/static/css/index.css
+++ b/static/css/index.css
@@ -19,19 +19,20 @@ html{
 }
 .navbar {
     padding: 8px;
+    display: flex;
     background-color: whitesmoke;
     height: 2.8rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
-    position: -webkit-sticky; 
-    position: sticky;
+    align-content: center;
+    justify-content: space-around;
     top:0;
     animation: ex;
     animation-duration: 0.5s;
 }
 .navbar ul{
     left:1%;
-    display: flex;
+    display: contents;
     width:100%;
     list-style: none;
     flex-wrap: nowrap;
@@ -63,6 +64,8 @@ html{
     top: 0;
     display: flex;
     flex-wrap: nowrap;
+    height: 2vw;
+    align-items: center;
 }
 .search{
 width: 500px;
@@ -72,8 +75,8 @@ display: flex;
 .search-box{
     top:10%;
     width: 100%;
-    height: 17px;
-    padding: 10px;
+    height: 100%;
+    padding-left: 3%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -86,7 +89,7 @@ display: flex;
 #search-btn{
     top:10%;
     width: 20%;
-    height: 17 px;
+    height: 100%;
     padding: 5px;
     border: none;
     outline: none;
@@ -123,11 +126,9 @@ display: flex;
 .profile
 {
     color: #000;
-    padding: 10px;
     font-size: 25px;
     border: none;
     font-family: 'Dongle', sans-serif;
-    
 }
 
 .profile:hover
@@ -139,7 +140,7 @@ display: flex;
 {
     position: relative;
     display: flexbox;
-    overflow: visible !important;
+   
 }
 
 .profile-content 
@@ -151,7 +152,6 @@ display: flex;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     right: 30%;
-    overflow: visible !important;
 }
   
 .profile-content a 
