--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -18,21 +18,21 @@ html{
     }
 }
 .navbar {
-    padding: 8px;
+    padding-top: 1rem;
+    display: flex;
     background-color: whitesmoke;
-    height: 2.5rem;
+    height: 2.8rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
-    position: -webkit-sticky; 
-    position: sticky;
-    justify-content: space-between;
+    align-content: center;
+    justify-content: space-around;
     top:0;
     animation: ex;
     animation-duration: 0.5s;
 }
 .navbar ul{
     left:1%;
-    display: flex;
+    display: contents;
     width:100%;
     list-style: none;
     flex-wrap: nowrap;
@@ -44,7 +44,7 @@ html{
   
 }
 .navbar li{
-    margin-top: 0.22em;
+    margin-top: 0.16em;
 }
 .navbar a{
     text-decoration: none;
@@ -55,7 +55,7 @@ html{
     color: black;
 }
 #a2{
-    margin-left:15%;
+    margin-left:30%;
 }
 .navbar a:hover{
     color: #646262;
@@ -63,14 +63,20 @@ html{
 .navbar form{
     top: 0;
     display: flex;
-    flex-wrap: nwrap;
+    flex-wrap: nowrap;
+    height: 2vw;
+    align-items: center;
+}
+.search{
+width: 500px;
+display: flex;
 }
 
 .search-box{
-  
+    top:10%;
     width: 100%;
-    height: 17px;
-    padding: 1px;
+    height: 100%;
+    padding-left: 3%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -81,9 +87,9 @@ html{
 }
 
 #search-btn{
-  
+    top:10%;
     width: 20%;
-    height: 17%;
+    height: 100%;
     padding: 5px;
     border: none;
     outline: none;
@@ -95,11 +101,6 @@ html{
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
-
-
-
-
-
 #a3 button{
     border:none;
     background:none;
@@ -125,7 +126,6 @@ html{
 .profile
 {
     color: #000;
-    padding: 10px;
     font-size: 25px;
     border: none;
     font-family: 'Dongle', sans-serif;
@@ -152,6 +152,8 @@ html{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     right: 30%;
+    border-radius: 3%;
+    font:caption;
 }
   
 .profile-content a 
@@ -188,7 +190,7 @@ body {
 
 
 /* Style the form container */
-form {
+.card {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
