--- a/templates/cart.html
+++ b/templates/cart.html
@@ -104,7 +104,7 @@
           <div class="box1-sz" style="margin-top: 15px;padding: 15px 0px;border-top:1.5px solid #E2E5DE">
             <div class="row">
               <div style="width: 33% !important;" class="col-md-4">
-                <img class="img-sz" style="height:200px" src="hoodie.jpg">
+                <img class="img-sz" style="height:200px" src="/static/image/hoodie.jpg">
               </div>
               <div style="padding:10px 0px;width: 50% !important;" class="col-md-6">
                 <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important">{{ item['ProductName'] }}</h5>
@@ -137,19 +137,19 @@
              
               <div>
                 <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important;float: left;">Total amount of Item: </h5>
-                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><span id="total">4</span></h5>
+                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><span id="total">1</span></h5>
               </div>
               <br>
 
               
               <div class="df-sz" style="margin-top: 15px">
                 <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important;float: left;">Total Price of Item: </h5>
-                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><i class="fa fa-inr" aria-hidden="true"></i>  <span>2700</span></h5>
+                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><i class="fa fa-inr" aria-hidden="true"></i>  <span>700</span></h5>
               </div> 
               <br>
               <div class="box1-sz" style="margin-top: 15px;padding: 15px 0px;border-top:1.5px solid #E2E5DE">
                 <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important;float: left;">To Pay: </h5>
-                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><i class="fa fa-inr" aria-hidden="true"></i>  <span id="totaltopay">2700</span></h5>
+                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><i class="fa fa-inr" aria-hidden="true"></i>  <span id="totaltopay">700</span></h5>
               </div>
               <br>
               <div style="display: flex;justify-content: center;">
