--- a/templates/bidpage.html
+++ b/templates/bidpage.html
@@ -52,14 +52,13 @@
     <section>
         <div class="card">
             <div class="edit-img">
-                <img src="/static/image/product1.png" alt="">
+                <img src="" alt="">
             </div>
         </div>
     </section>
     <section class="Display_Bids">
         <script src="/static/js/product.js"></script>
         {% if bidarray|length!=0 %}
-        
         <h1>{{bidarray[0]['ProductName']}}</h1>
         <p class="details">{{bidarray[0]['Description_']}}</p>
         <br>
