--- a/templates/edit_products_fp.html
+++ b/templates/edit_products_fp.html
@@ -27,13 +27,13 @@
   
         <li id="a1"><b>CDSLite</b></li>
         <li id="a2">
-          <form>
+          <!-- <form>
               <input type="text" class="search-box" placeholder="Search products">
               <button id="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                   </svg>
               </button>
-          </form>
+          </form> -->
           </li>
           <li id="a3"><a href="{{ url_for('index') }}">Bid</a></li>
           <li id="a3"><a href="{{ url_for('Barter') }}">Barter</a></li>
@@ -115,13 +115,18 @@
             {% endfor %}
           </select>
           <br>
-          <br>
-          Sub Category<select id = "scat" name="scat" multiple>
-            {% for j in subcatlist %}
-              <OPTION value={{j["SubcategoryID"]}}>{{j['subcatName']}}</OPTION>
-            {% endfor %}
+
+          SubCategory<select id="scat" name="cat" multiple>
+            <option disabled selected value> -- select an option -- </option>
           </select>
-          <br>
+
+          <script>
+            const new_subcatlist = {{subcatlist|tojson}};
+            const new_constrainlist = {{constrainlist|tojson}};
+            var cat = document.getElementById("cat");
+            cat.addEventListener("click", function(){match_subcat(new_subcatlist,new_constrainlist);});
+        </script>
+        
         </div>
 
         <input type="submit">
