--- a/static/css/merchandise.css
+++ b/static/css/merchandise.css
@@ -19,61 +19,72 @@ html{
 }
 .navbar {
     padding: 8px;
+    display: flex;
     background-color: whitesmoke;
-    height: 2.8rem;
+    height: 3.5rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
-    position: -webkit-sticky; 
-    position: sticky;
+    justify-content: space-around;
     top:0;
     animation: ex;
     animation-duration: 0.5s;
 }
 .navbar ul{
-    left:1%;
+
     display: flex;
     width:100%;
     list-style: none;
-    flex-wrap: nowrap;
+    justify-content: space-between;
+
+
     font-family: 'Dongle', sans-serif;
     font-size: 1.8rem;
-    max-height: 100%;
-    justify-content: space-between;
-    text-align: center;
+
   
 }
 .navbar li{
-    margin-top: 0.16em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #165c9b;
+    height: 100%;
 }
 .navbar a{
     text-decoration: none;
     color: black;
 }
 #a1{
-    margin-left: 1%;
     color: black;
 }
 #a2{
-    margin-left:30%;
+    margin-left: 30%;
 }
 .navbar a:hover{
     color: #646262;
+}
+.carim
+{
+   
+    margin-top: 50%;
+   
 }
 .navbar form{
     top: 0;
     display: flex;
     flex-wrap: nowrap;
+    height: 2vw;
+    align-items: center;
 }
-.search{
+/*.search{
 width: 500px;
 display: flex;
-}
+}*/
 
 .search-box{
-    top:10%;
+    /*top:10%;*/
     width: 100%;
-    height: 17px;
-    padding: 10px;
+    height: 100%;
+    padding-left: 3%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -86,7 +97,7 @@ display: flex;
 #search-btn{
     top:10%;
     width: 20%;
-    height: 17 px;
+    height: 100%;
     padding: 5px;
     border: none;
     outline: none;
@@ -117,7 +128,6 @@ display: flex;
 	transition: all 5s ease-in-out;
     width: 30%;
 }
-
 /*Profile dropdown*/
 
 .profile
@@ -339,6 +349,7 @@ a:visited
   
   .product_card .details a {
     text-decoration: none;
+    color: #fff;
   }
   
   .product_card .details .card-name {
@@ -365,8 +376,17 @@ a:visited
     transition: background-color 0.2s ease;
   }
   
-  .product_card .details a button:hover {
-    background-color: #165c9b;
-  }
+  
   
 
+  .buttons{
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    cursor: pointer;
+    width: 10pc;
+    font-size: 15px;
+    float: left;
+    border-radius: 10px;
+    text-decoration: none;
+}
