--- a/templates/merchandise.html
+++ b/templates/merchandise.html
@@ -43,7 +43,7 @@
           <li id="a3"><a href= "{{url_for('read_shopping_cart')}}"><img src="/static/image/cart.png" alt=""></a></li>
           <li id="a3">
                 <div class="profile_dropdown">
-                    <button class="profile"><img src="/static/image/user.png" alt=""></button>
+                    <button class="profile"><img src="/static/image/user.png" class="carim" alt=""></button>
                     <div class="profile-content">
                         <a href="#">Edit Profile</a>
                         <a href="{{ url_for('product') }}">Add Product</a>
