--- a/static/css/addproduct.css
+++ b/static/css/addproduct.css
@@ -18,62 +18,76 @@ html{
     }
 }
 .navbar {
-    padding: 8px;
+    padding: 0.5% ;
+    padding-left: 5%;
+    padding-right: 2%;
+    display: flex;
     background-color: whitesmoke;
-    height: 3.8rem;
+    height: 3.5rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
-    position: -webkit-sticky; 
-    position: sticky;
+    justify-content: space-around;
     top:0;
     animation: ex;
     animation-duration: 0.5s;
 }
 .navbar ul{
-    left:1%;
+
     display: flex;
+    flex-wrap: nowrap;
     width:100%;
     list-style: none;
-    flex-wrap: nowrap;
+    justify-content:space-between;
+
+
     font-family: 'Dongle', sans-serif;
     font-size: 1.8rem;
-    max-height: 100%;
-    justify-content: space-between;
-    text-align: center;
+
   
 }
 .navbar li{
-    margin-top: 0.16em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+ 
 }
 .navbar a{
     text-decoration: none;
     color: black;
 }
 #a1{
-    margin-left: 1%;
     color: black;
 }
 #a2{
-    margin-left:30%;
+    margin-left: 30%;
 }
 .navbar a:hover{
     color: #646262;
+}
+.carim
+{
+    
+    margin-top: 50%;
+   
 }
 .navbar form{
     top: 0;
     display: flex;
     flex-wrap: nowrap;
+    height: 2vw;
+    align-items: center;
 }
-.search{
+/*.search{
 width: 500px;
 display: flex;
-}
+}*/
 
 .search-box{
-    top:10%;
+    /*top:10%;*/
     width: 100%;
-    height: 17px;
-    padding: 10px;
+    height: 100%;
+    padding-left: 3%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -86,7 +100,7 @@ display: flex;
 #search-btn{
     top:10%;
     width: 20%;
-    height: 17 px;
+    height: 100%;
     padding: 5px;
     border: none;
     outline: none;
@@ -139,6 +153,7 @@ display: flex;
     position: relative;
     display: flexbox;
     overflow: visible !important;
+    top: 50%;
 }
 
 .profile-content 
@@ -180,7 +195,7 @@ display: flex;
 body {
     background: #fbf3ff;
 }
-
+/*
 .container {
     position: absolute;
     max-width: 800px;
@@ -311,18 +326,18 @@ body {
     outline: none;
 }
 
-
+*/
 
 /* Style the form container */
 form {
     width: 80%;
-    margin-top : 50px;
+    margin-top : 20px;
     margin-left: 10%;
     position: static;
     padding: 20px;
     background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 2, 0.2);
   }
   
   /* Style the form fields */
@@ -359,6 +374,8 @@ form {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-left: 45%;
+    margin-right: 45%;
     
   }
   
