--- a/static/css/barter.css
+++ b/static/css/barter.css
@@ -18,62 +18,80 @@ html{
     }
 }
 .navbar {
-    padding: 8px;
+    padding: 0.5% ;
+    padding-left: 5%;
+    padding-right: 2%;
+    display: flex;
     background-color: whitesmoke;
-    height: 2.8rem;
+    height: 3.3rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
-    position: -webkit-sticky; 
-    position: sticky;
+    justify-content: space-around;
     top:0;
     animation: ex;
     animation-duration: 0.5s;
 }
 .navbar ul{
-    left:1%;
+
     display: flex;
     width:100%;
     list-style: none;
-    flex-wrap: nowrap;
+    justify-content: space-between;
+
+
     font-family: 'Dongle', sans-serif;
     font-size: 1.8rem;
-    max-height: 100%;
-    justify-content: space-between;
-    text-align: center;
+  
   
 }
 .navbar li{
-    margin-top: 0.16em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    background-color: #165c9b;
 }
 .navbar a{
     text-decoration: none;
     color: black;
 }
 #a1{
-    margin-left: 1%;
     color: black;
 }
+
 #a2{
-    margin-left:30%;
+    margin-left: 30%;
 }
+
 .navbar a:hover{
     color: #646262;
 }
-.navbar form{
-    top: 0;
-    display: flex;
-    flex-wrap: nowrap;
-}
-.search{
-width: 500px;
-display: flex;
+
+.carim
+{
+    margin-bottom: 50%;
 }
 
+.navbar form
+{
+    margin-top: 1%;
+    display: flex;
+    flex-wrap: nowrap;
+    height: 2vw;
+    width: 80%;
+    font-size: 30px;
+    align-items: center;
+}
+/*.search{
+width: 500px;
+display: flex;
+}*/
+
 .search-box{
-    top:10%;
+    /*top:10%;*/
     width: 100%;
-    height: 17px;
-    padding: 10px;
+    height: 100%;
+    padding-left: 3%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -86,7 +104,7 @@ display: flex;
 #search-btn{
     top:10%;
     width: 20%;
-    height: 17 px;
+    height: 100%;
     padding: 5px;
     border: none;
     outline: none;
@@ -117,6 +135,7 @@ display: flex;
 	transition: all 5s ease-in-out;
     width: 30%;
 }
+
 
 /*Profile dropdown*/
 
