--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,9 @@
 
 <body>
     
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Ubuntu&display=swap" rel="stylesheet">
   <header>
     <nav class="navbar">
       <ul>
