--- a/static/css/bid_buyer.css
+++ b/static/css/bid_buyer.css
@@ -16,12 +16,11 @@ html{
     }
 }
 .navbar {
-    padding: 0.5% ;
+    padding: 0.3% ;
     padding-left: 5%;
     padding-right: 2%;
     display: flex;
     background-color: whitesmoke;
-    height: 3.5rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
     justify-content: space-around;
@@ -56,15 +55,23 @@ html{
     color: black;
 }
 #a2{
-    margin-left: 30%;
+    margin-left: 20%;
 }
 .navbar a:hover{
     color: #646262;
 }
 .carim
 {
-    
-    margin-top: 50%;
+    height: 90%;
+    padding-left: 20%;
+    margin: auto;
+   
+}
+.carim1
+{
+    width: 80%;
+    height: 40%;
+    margin: auto;
    
 }
 .navbar form{
