--- a/static/css/index.css
+++ b/static/css/index.css
@@ -21,6 +21,7 @@ html{
     padding: 0.5% ;
     padding-left: 5%;
     padding-right: 2%;
+    position: relative;
     display: flex;
     background-color: whitesmoke;
     height: 3.5rem;
@@ -106,7 +107,7 @@ display: flex;
     top:10%;
     width: 20%;
     height: 100%;
-    padding: 5px;
+    padding: 8px;
     border: none;
     outline: none;
     cursor: pointer;
@@ -324,9 +325,12 @@ a:visited
     margin-bottom: 0.7rem;
 }
 */
-
-.product-container {
+.card{
     display: flex;
+    background-color: #fff;
+}
+.product-container {
+    display:flex;
     flex-wrap: wrap;
     justify-content: space-around;
   }
@@ -343,7 +347,7 @@ a:visited
     overflow: hidden;
     display: inline-block;
   }
-  
+
   .product_card .image {
     width: 100%;
     height: 100%;
@@ -374,19 +378,25 @@ a:visited
     margin-bottom: 10px;
     color: #222;
   }
+
+  .card-name{
+    width: 240px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
+  }
   
   .product_card .details .price {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 4%;
     font-size: 1.2rem;
     color: #000000;
   }
   
   
- 
-  
 .buttons{
-    padding: 12px;
+    padding: 5%;
     color: white;
     background-color: #000;
     cursor: pointer;
@@ -396,4 +406,10 @@ a:visited
     border-radius: 10px;
     text-decoration: none;
    
+}
+
+.buttons_space{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
 }
