--- a/static/css/myproduct.css
+++ b/static/css/myproduct.css
@@ -49,7 +49,6 @@ html{
     flex-direction: column;
     justify-content: center;
     height: 100%;
-    //background-color: #165c9b;
 }
 .navbar a{
     text-decoration: none;
@@ -60,7 +59,7 @@ html{
 }
 
 #a2{
-    margin-left: 30%;
+    margin-left: 18.5%;
 }
 
 .navbar a:hover{
@@ -69,9 +68,13 @@ html{
 
 .carim
 {
-    width: auto;
-    height: 25px;
-    margin-bottom: 50%;
+    /* width: 70%; */
+    margin-top: 50%;
+}
+.carim1
+{
+    width: 80%;
+    margin-top: 50%;
 }
 
 .navbar form
@@ -90,7 +93,7 @@ display: flex;
 }*/
 
 .search-box{
-    /*top:10%;*/
+    /* top:10%; */
     width: 100%;
     height: 100%;
     padding-left: 3%;
@@ -105,9 +108,9 @@ display: flex;
 
 #search-btn{
     top:10%;
-    width: 20%;
+    width: 30%;
     height: 100%;
-    padding: 5px;
+    padding: 8px;
     border: none;
     outline: none;
     cursor: pointer;
