--- a/static/css/myproduct.css
+++ b/static/css/myproduct.css
@@ -22,7 +22,7 @@ html{
     padding-left: 5%;
     padding-right: 2%;
     display: flex;
-    background-color: whitesmoke;
+    background-color: #ccccff;
     height: 3.3rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
@@ -305,6 +305,7 @@ a:visited
     color: white;
 }
 .product_container {
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex;
@@ -340,6 +341,7 @@ a:visited
   .product_card .details {
     padding: 20px;
     display: flex;
+    background-color: #f3f3ff;
     flex-direction: column;
     align-items: center;
   }
@@ -373,7 +375,7 @@ a:visited
     color: white;
     background-color: #000;
     cursor: pointer;
-    width: 6.8pc;
+    width: 5.8pc;
     align-items: center;
     font-size: 15px;
     border-radius: 10px;
@@ -382,6 +384,9 @@ a:visited
     flex-wrap: nowrap;
     flex-direction: column;
     justify-content: center;
-    margin-right: 10px; /* optional spacing between buttons */
+    margin-right: 7px; /* optional spacing between buttons */
     padding: 5px 10px;
+}
+.button_class{
+    display:flex;
 }
