--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -23,7 +23,7 @@ html{
     padding-left: 5%;
     padding-right: 2%;
     display: flex;
-    background-color: whitesmoke;
+    background-color: #ccccff;
     height: 2.6rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
@@ -171,7 +171,7 @@ display: flex;
     width: 20%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    top: 35px;
+    top: 25px;
     right: 25%;
 }
   
@@ -201,7 +201,7 @@ display: flex;
 
 
 body {
-    background: #fbf3ff;
+    background: #ffffff;
 }
 
 
@@ -213,7 +213,7 @@ body {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #f3f3ff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
