--- a/templates/cart.html
+++ b/templates/cart.html
@@ -23,6 +23,7 @@
   </head>
 
 <body>
+  
    
       <section>
       <div style="margin:20px 20px;" class="row">
@@ -37,6 +38,9 @@
                 </div>
                 {% endif %}
             {% endwith %}
+          
+
+
           {% for item in data %}
           <div class="box1-sz" style="margin-top: 15px;padding: 15px 0px;border-top:1.5px solid #E2E5DE">
             <div class="row">
@@ -49,7 +53,7 @@
 
                 <p class="mid3-sz" style="margin:0!important;"><span style="font-weight: 500">{{ item['Description'] }}</p>
                 <div style="display:flex;justify-content: flex-start;">
-                  <p class="mid3-sz" style="margin:0!important;margin-right:10px!important"><span style="font-weight: 500">Qty: {{ item['Description'] }}</span></p>
+                  <p class="mid3-sz" style="margin:0!important;margin-right:10px!important"><span style="font-weight: 500">Qty: {{ item['Quantity'] }}</span></p>
                 </div>
                 <br>
                 <div style="display:flex;justify-content: flex-start;">
@@ -65,7 +69,7 @@
           </div>
           {% endfor %}
 
-
+        {}
         </div>
         <div style="width: 36% !important;" class="col-md-4">
           <div class="box-sz" style="padding:20px 30px;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
@@ -73,25 +77,18 @@
             <div class="box1-sz" style="margin-top: 15px;padding: 15px 0px;border-top:1.5px solid #E2E5DE">
              
               <div>
-                <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important;float: left;">Total amount of Item: </h5>
-                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><span id="total">1</span></h5>
+                <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important;float: left;">No. of Items: </h5>
+                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><span id="total">{{items}}</span></h5>
               </div>
               <br>
 
-              
-              <div class="df-sz" style="margin-top: 15px">
-                <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important;float: left;">Total Price of Item: </h5>
-                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><i class="fa fa-inr" aria-hidden="true"></i>  <span>700</span></h5>
-              </div> 
-              <br>
               <div class="box1-sz" style="margin-top: 15px;padding: 15px 0px;border-top:1.5px solid #E2E5DE">
-                <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important;float: left;">To Pay: </h5>
-                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><i class="fa fa-inr" aria-hidden="true"></i>  <span id="totaltopay">700</span></h5>
+                <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important;float: left;">Total Price: </h5>
+                <h5 class="mid2-sz" style="font-weight: 400!important;margin:0!important;float: right;"><i class="fa fa-inr" aria-hidden="true"></i>  <span id="totaltopay">{{total}}</span></h5>
               </div>
               <br>
               <div style="display: flex;justify-content: center;">
                 <button class="buy_now"><a href="{{url_for('index')}}" class="ahref">Home</a></button>
-                <button class="buy_now"><a href="/payment"></a>Pay now</a></button>
               </div>
             </div> 
           </div>
