--- a/templates/bid_buyer.html
+++ b/templates/bid_buyer.html
@@ -25,7 +25,7 @@
             </li>
             <li id="a3"><a href="{{ url_for('index') }}">Bid</a></li>
             <li id="a3"><a href="{{ url_for('Barter') }}">Barter</a></li>
-            <li id="a3"><a href="merchandise.html">Merchandise</a></li>
+            <li id="a3"><a href="{{ url_for('merchandise') }}">Merchandise</a></li>
             <li id="a3"><a href="/index/shopping_cart"><img src="/static/image/cart.png" alt=""></a></li>
             <li id="a3">
                 <div class="profile_dropdown">
