--- a/templates/merchandise.html
+++ b/templates/merchandise.html
@@ -12,7 +12,7 @@
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="/static/css/myproduct.css">
+    <link rel="stylesheet" href="/static/css/index.css">
     <script type = "text/javascript" src="../static/js/pdt_form.js"></script>
 </head>
 
