Revert "Feedback changes"

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -2,7 +2,6 @@
 {
     margin: 0;
     padding: 0;
-    
 }
 
 /*Navigation Bar*/
@@ -19,64 +18,47 @@ html{
     }
 }
 .navbar {
-    padding: 0.5% ;
-    padding-left: 5%;
-    padding-right: 2%;
+    padding-top: 1rem;
     display: flex;
-    background-color: #ccccff;
-    height: 2.6rem;
+    background-color: whitesmoke;
+    height: 2.8rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
+    align-content: center;
     justify-content: space-around;
     top:0;
     animation: ex;
     animation-duration: 0.5s;
 }
 .navbar ul{
-
-    display: flex;
+    left:1%;
+    display: contents;
     width:100%;
     list-style: none;
-    justify-content: space-between;
+    flex-wrap: nowrap;
     font-family: 'Dongle', sans-serif;
-    font-size: 1.8rem;  
+    font-size: 1.3rem;
+    max-height: 100%;
+    justify-content: space-between;
+    text-align: center;
+  
 }
 .navbar li{
-    font-family: 'Dongle', sans-serif;
-    display: flex;
-    font-size: 1.8rem;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    font: bolder
+    margin-top: 0.16em;
 }
 .navbar a{
     text-decoration: none;
     color: black;
 }
 #a1{
+    margin-left: 1%;
     color: black;
 }
 #a2{
-    margin-left: 30%;
+    margin-left:30%;
 }
 .navbar a:hover{
     color: #646262;
-}
-.carim
-{
-    height: 90%;
-    margin-left: 25%;
-    margin: auto;
-   
-}
-.carim1
-{
-    width: 80%;
-    height: 80%;
-    margin-left: 4%;
-    margin: auto;
-   
 }
 .navbar form{
     top: 0;
@@ -85,13 +67,13 @@ html{
     height: 2vw;
     align-items: center;
 }
-/*.search{
+.search{
 width: 500px;
 display: flex;
-}*/
+}
 
 .search-box{
-    /*top:10%;*/
+    top:10%;
     width: 100%;
     height: 100%;
     padding-left: 3%;
@@ -139,7 +121,6 @@ display: flex;
     width: 30%;
 }
 
-
 /*Profile dropdown*/
 
 .profile
@@ -159,7 +140,7 @@ display: flex;
 {
     position: relative;
     display: flexbox;
-
+   
 }
 
 .profile-content 
@@ -167,12 +148,12 @@ display: flex;
     display: none;
     position: absolute;
     background-color: #fff;
-    min-width: 150px;
-    width: 20%;
+    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    top: 25px;
-    right: 25%;
+    right: 30%;
+    border-radius: 3%;
+    font:caption;
 }
   
 .profile-content a 
@@ -201,7 +182,7 @@ display: flex;
 
 
 body {
-    background: #ffffff;
+    background: #fbf3ff;
 }
 
 
@@ -213,7 +194,7 @@ body {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f3f3ff;
+    background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
@@ -266,7 +247,6 @@ input[type="submit"] {
     margin-left: 3%;
     border-radius: 10px;
     margin: 25px;
-   
     transform: translate(190%);
 }
 
@@ -300,6 +280,6 @@ input[type="submit"] {
 .card
 {
     margin-top: 20px;
-   margin-bottom: 10px;
+   
     
 }
