--- a/templates/addProduct.html
+++ b/templates/addProduct.html
@@ -31,10 +31,10 @@
           <li id="a3"><a href="{{ url_for('index') }}">Bid</a></li>
           <li id="a3"><a href="{{ url_for('Barter') }}">Barter</a></li>
           <li id="a3"><a href="merchandise.html">Merchandise</a></li>
-          <li id="a3"><a href="/index/shopping_cart"><img src="/static/image/cart.png" class="carim" alt=""></a></li>
+          <li id="a3"><a href="/index/shopping_cart"><img src="/static/image/cart.png" alt=""></a></li>
           <li id="a3">
               <div class="profile_dropdown">
-                  <button class="profile"><img src="/static/image/user.png" class="carim1" alt=""></button>
+                  <button class="profile"><img src="/static/image/user.png" alt=""></button>
                   <div class="profile-content">
                       <a href="/read_user">Edit Profile</a>
                       <a href="{{ url_for('product') }}">Add Product</a>
