--- a/static/css/addproduct.css
+++ b/static/css/addproduct.css
@@ -18,83 +18,62 @@ html{
     }
 }
 .navbar {
-    padding: 0.5% ;
-    padding-left: 5%;
-    padding-right: 2%;
-    display: flex;
-    background-color: #ccccff;
-    height: 3.5rem;
+    padding: 8px;
+    background-color: whitesmoke;
+    height: 3.8rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
-    justify-content: space-around;
+    position: -webkit-sticky; 
+    position: sticky;
     top:0;
     animation: ex;
     animation-duration: 0.5s;
 }
 .navbar ul{
-
+    left:1%;
     display: flex;
-    flex-wrap: nowrap;
     width:100%;
     list-style: none;
-    justify-content:space-between;
-
-
+    flex-wrap: nowrap;
     font-family: 'Dongle', sans-serif;
     font-size: 1.8rem;
-
+    max-height: 100%;
+    justify-content: space-between;
+    text-align: center;
   
 }
 .navbar li{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
+    margin-top: 0.16em;
 }
 .navbar a{
     text-decoration: none;
     color: black;
 }
 #a1{
+    margin-left: 1%;
     color: black;
 }
 #a2{
-    margin-left: 20%;
+    margin-left:30%;
 }
 .navbar a:hover{
     color: #646262;
-}
-.carim1
-{
-    width: 80%;
-    height: 40%;
-    margin: auto;
-   
-}
-.carim1
-{
-    width: 80%;
-    height: 40%;
-    margin: auto;
-   
 }
 .navbar form{
     top: 0;
     display: flex;
     flex-wrap: nowrap;
-    height: 2vw;
-    align-items: center;
 }
-/*.search{
+.search{
 width: 500px;
 display: flex;
-}*/
+}
 
 .search-box{
-    /*top:10%;*/
+    top:10%;
     width: 100%;
-    height: 100%;
-    padding-left: 3%;
+    height: 17px;
+    padding: 10px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -107,7 +86,7 @@ display: flex;
 #search-btn{
     top:10%;
     width: 20%;
-    height: 100%;
+    height: 17 px;
     padding: 5px;
     border: none;
     outline: none;
@@ -160,7 +139,6 @@ display: flex;
     position: relative;
     display: flexbox;
     overflow: visible !important;
-    top: 50%;
 }
 
 .profile-content 
@@ -200,9 +178,9 @@ display: flex;
 
 
 body {
-    background: white;
+    background: #fbf3ff;
 }
-/*
+
 .container {
     position: absolute;
     max-width: 800px;
@@ -333,18 +311,18 @@ body {
     outline: none;
 }
 
-*/
+
 
 /* Style the form container */
 form {
     width: 80%;
-    margin-top : 20px;
+    margin-top : 50px;
     margin-left: 10%;
     position: static;
     padding: 20px;
-    background-color: #f3f3ff;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 2, 0.2);
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
   
   /* Style the form fields */
@@ -381,8 +359,6 @@ form {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-left: 45%;
-    margin-right: 45%;
     
   }
   
