--- a/static/css/bid_buyer.css
+++ b/static/css/bid_buyer.css
@@ -6,91 +6,70 @@
 html{
     height: 100%;
     width: 100%;
-}
-@keyframes ex{
-    0%{ 
-        margin-top: 400px;
-    }
-    100%{
-        margin-top: 0;
-    }
-}
-.navbar {
-    padding: 0.3% ;
-    padding-left: 5%;
-    padding-right: 2%;
-    display: flex;
-    background-color: whitesmoke;
-    max-width: 100%;
-    box-shadow: 0 0 8px 0 grey;
-    justify-content: space-around;
-    top:0;
-    animation: ex;
-    animation-duration: 0.5s;
-}
-.navbar ul{
-
-    display: flex;
-    width:100%;
-    list-style: none;
-    justify-content: space-between;
-
-
-    font-family: 'Dongle', sans-serif;
-    font-size: 1.8rem;
-
-  
-}
-.navbar li{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-}
-.navbar a{
-    text-decoration: none;
-    color: black;
-}
-#a1{
-    color: black;
-}
-#a2{
-    margin-left: 20%;
-}
-.navbar a:hover{
+  }
+  @keyframes ex{
+      0%{ 
+          margin-top: 400px;
+      }
+      100%{
+          margin-top: 0;
+      }
+  }
+  .navbar {
+      padding: 8px;
+      background-color: whitesmoke;
+      height: 2.8rem;
+      max-width: 100%;
+      box-shadow: 0 0 8px 0 grey;
+      position: -webkit-sticky; /* Safari */
+      position: sticky;
+      top:0;
+      animation: ex;
+      animation-duration: 0.5s;
+  }
+  .navbar ul{
+      left:1%;
+      display: flex;
+      width:100%;
+      list-style: none;
+      flex-wrap: nowrap;
+      font-family: 'Dongle', sans-serif;
+      font-size: 1.8rem;
+      max-height: 100%;
+      justify-content: space-between;
+  }
+  .navbar li{
+      margin-top: 0.16em;
+  }
+  .navbar a{
+      text-decoration: none;
+      color: black;
+  }
+  #a1{
+      margin-left: 1%;
+      color: black;
+  }
+  #a2{
+    margin-left:30%;
+  }
+  .navbar a:hover{
     color: #646262;
-}
-.carim
-{
-    height: 90%;
-    padding-left: 20%;
-    margin: auto;
-   
-}
-.carim1
-{
-    width: 80%;
-    height: 40%;
-    margin: auto;
-   
-}
-.navbar form{
+  }
+  .navbar form{
     top: 0;
     display: flex;
     flex-wrap: nowrap;
-    height: 2vw;
-    align-items: center;
-}
-/*.search{
-width: 500px;
-display: flex;
-}*/
-
-.search-box{
-    /*top:10%;*/
+  }
+  .search{
+    width: 500px;
+    display: flex;
+  }
+  
+  .search-box{
+    top:10%;
     width: 100%;
-    height: 100%;
-    padding-left: 3%;
+    height: 17px;
+    padding: 10px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -98,12 +77,12 @@ display: flex;
     background: white;
     color: #a9a9a9;
     outline: none;
-}
-
-#search-btn{
+  }
+  
+  #search-btn{
     top:10%;
     width: 20%;
-    height: 100%;
+    height: 17 px;
     padding: 5px;
     border: none;
     outline: none;
@@ -114,27 +93,20 @@ display: flex;
     font-size: 15px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-}
-#a3 button{
+  }
+  #a3 button{
     border:none;
     background:none;
     cursor: pointer;
-}
-.search-box::placeholder{
+  }
+  .search-box::placeholder{
     color: #a9a9a9;
-}
-#login{
+  }
+  #login{
     display: none;
     width: 60%;
     border: 2px solid;
-}
-.login_karo
-{
-    position: relative;
-	transition: all 5s ease-in-out;
-    width: 30%;
-}
-
+  }
 
 
 /*Profile dropdown*/
