--- a/static/css/merchandise.css
+++ b/static/css/merchandise.css
@@ -18,86 +18,62 @@ html{
     }
 }
 .navbar {
-    padding: 0.5% ;
-    padding-left: 5%;
-    padding-right: 2%;
-    position: relative;
-    display: flex;
-    background-color: #ccccff;
-    height: 3.5rem;
+    padding: 8px;
+    background-color: whitesmoke;
+    height: 2.8rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
-    justify-content: space-around;
+    position: -webkit-sticky; 
+    position: sticky;
     top:0;
     animation: ex;
     animation-duration: 0.5s;
 }
 .navbar ul{
-
+    left:1%;
     display: flex;
     width:100%;
     list-style: none;
-    justify-content: space-between;
-
-
+    flex-wrap: nowrap;
     font-family: 'Dongle', sans-serif;
     font-size: 1.8rem;
-  
+    max-height: 100%;
+    justify-content: space-between;
+    text-align: center;
   
 }
 .navbar li{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
+    margin-top: 0.16em;
 }
 .navbar a{
     text-decoration: none;
     color: black;
 }
 #a1{
+    margin-left: 1%;
     color: black;
 }
-
 #a2{
-    margin-left: 30%;
+    margin-left:30%;
 }
-
 .navbar a:hover{
     color: #646262;
 }
-
-.carim
-{
-    /* width: 70%; */
-    margin-top: 50%;
-}
-.carim1
-{
-    width: 80%;
-    margin-top: 50%;
-}
-
-.navbar form
-{
-    margin-top: 1%;
+.navbar form{
+    top: 0;
     display: flex;
     flex-wrap: nowrap;
-    height: 2vw;
-    font-size: 30px;
-    align-items: center;
 }
-/*.search{
+.search{
 width: 500px;
 display: flex;
-}*/
+}
 
 .search-box{
-    /* top:10%; */
+    top:10%;
     width: 100%;
-    height: 100%;
-    padding-left: 3%;
-    /* margin-left: 10%; */
+    height: 17px;
+    padding: 10px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -110,8 +86,8 @@ display: flex;
 #search-btn{
     top:10%;
     width: 20%;
-    height: 100%;
-    /* margin-left: 10%; */
+    height: 17 px;
+    padding: 5px;
     border: none;
     outline: none;
     cursor: pointer;
@@ -151,6 +127,7 @@ display: flex;
     font-size: 25px;
     border: none;
     font-family: 'Dongle', sans-serif;
+    
 }
 
 .profile:hover
@@ -162,7 +139,7 @@ display: flex;
 {
     position: relative;
     display: flexbox;
-   
+    overflow: visible !important;
 }
 
 .profile-content 
@@ -174,6 +151,7 @@ display: flex;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     right: 30%;
+    overflow: visible !important;
 }
   
 .profile-content a 
@@ -197,8 +175,17 @@ display: flex;
     background-color: #000;
 }
 
+/*categories
 
-
+.cat-title
+{
+    padding: 10px;
+    width: 18%;
+    height: 200px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+   
+    margin: 20px 20px;
+}
 
 
 
@@ -210,12 +197,14 @@ display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
     flex-wrap: wrap;
+    margin: 20px;
+    border-radius:25px ;
+    padding: 60px 20px;
+    overflow: visible;
     
 }
 
-.card::-webkit-scrollbar{
-    display: none;
-}
+
 
 a:link
 {
@@ -239,9 +228,12 @@ a:visited
     transition: 0.3s;
     width: 22%;
     margin-bottom: 1.5rem;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    display:inline-flexbox
 }
 .product_card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(98, 92, 92, 0.2);
   }
 
 
@@ -262,7 +254,17 @@ a:visited
     object-fit: cover;
 }
 
-
+.buttons{
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    cursor: pointer;
+    width: 47%;
+    font-size: 15px;
+    float: left;
+    margin-left: 25%;
+    border-radius: 10px;
+}
 
 .product_card:hover .buttons{
     opacity: 1;
@@ -295,26 +297,15 @@ a:visited
     margin-bottom: 0.7rem;
 }
 */
-.buttons{
-    width: 47%;
-    float: left;
-    margin-left: 3%;
-    display: flex;
-    color: white;
-}
-.button_correct {
-    color: white;
-}
-.product_container {
+
+.product-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex;
-    background-color: white;
-    position: static;
+    justify-content: space-around;
   }
   
   .product_card {
-    background-color: #f3f3ff;
+    background-color: #f5f5f5;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
     width: 300px;
     margin-top: 2vw;
@@ -348,7 +339,6 @@ a:visited
   
   .product_card .details a {
     text-decoration: none;
-    color: #fff;
   }
   
   .product_card .details .card-name {
@@ -364,26 +354,19 @@ a:visited
     color: #000000;
   }
   
-  
-
-  .card {
-    position: static;
+  .product_card .details a button {
+    background-color: #000000;
+    border: none;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
   }
   
-  .buttons{
-    padding: 12px;
-    color: white;
-    background-color: #000000;
-    cursor: pointer;
-    width: 6.8pc;
-    align-items: center;
-    font-size: 15px;
-    border-radius: 10px;
-    text-decoration: none;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 10px; /* optional spacing between buttons */
-    padding: 5px 10px;
-}
+  .product_card .details a button:hover {
+    background-color: #165c9b;
+  }
+  
+
