--- a/static/css/myproduct.css
+++ b/static/css/myproduct.css
@@ -18,82 +18,60 @@ html{
     }
 }
 .navbar {
-    padding: 0.5% ;
-    padding-left: 5%;
-    padding-right: 2%;
-    display: flex;
-    background-color: #ccccff;
-    height: 3.3rem;
+    padding: 8px;
+    background-color: whitesmoke;
+    height: 2.8rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
-    justify-content: space-around;
+    align-content: center;
     top:0;
     animation: ex;
     animation-duration: 0.5s;
 }
 .navbar ul{
-
-    display: flex;
+    left:1%;
+    display: contents;
     width:100%;
     list-style: none;
-    justify-content: space-between;
-
-
+    flex-wrap: nowrap;
     font-family: 'Dongle', sans-serif;
     font-size: 1.8rem;
-  
+    max-height: 100%;
+    justify-content: space-between;
+    text-align: center;
   
 }
 .navbar li{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
+    margin-top: 0.16em;
 }
 .navbar a{
     text-decoration: none;
     color: black;
 }
 #a1{
+    margin-left: 1%;
     color: black;
 }
-
 #a2{
-    margin-left: 18.5%;
+    margin-left:30%;
 }
-
 .navbar a:hover{
     color: #646262;
 }
-
-.carim
-{
-    /* width: 70%; */
-    margin-top: 50%;
-}
-.carim1
-{
-    width: 80%;
-    margin-top: 50%;
-}
-
-.navbar form
-{
-    margin-top: 1%;
+.navbar form{
+    top: 0;
     display: flex;
     flex-wrap: nowrap;
     height: 2vw;
-    width: 80%;
-    font-size: 30px;
     align-items: center;
 }
-/*.search{
+.search{
 width: 500px;
 display: flex;
-}*/
+}
 
 .search-box{
-    /* top:10%; */
+    top:10%;
     width: 100%;
     height: 100%;
     padding-left: 3%;
@@ -108,9 +86,9 @@ display: flex;
 
 #search-btn{
     top:10%;
-    width: 30%;
+    width: 20%;
     height: 100%;
-    padding: 8px;
+    padding: 5px;
     border: none;
     outline: none;
     cursor: pointer;
@@ -305,7 +283,6 @@ a:visited
     color: white;
 }
 .product_container {
-    background-color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex;
@@ -341,14 +318,12 @@ a:visited
   .product_card .details {
     padding: 20px;
     display: flex;
-    background-color: #f3f3ff;
     flex-direction: column;
     align-items: center;
   }
   
   .product_card .details a {
     text-decoration: none;
-    color: #fff;
   }
   
   .product_card .details .card-name {
@@ -364,29 +339,23 @@ a:visited
     color: #000000;
   }
   
+  .product_card .details a button {
+    background-color: #000000;
+    border: none;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    justify-content: center;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+  }
   
+  .product_card .details a button:hover {
+    background-color: #165c9b;
+  }
 
   .card {
     position: static;
   }
   
-  .buttons{
-    padding: 12px;
-    color: white;
-    background-color: #000;
-    cursor: pointer;
-    width: 5.8pc;
-    align-items: center;
-    font-size: 15px;
-    border-radius: 10px;
-    text-decoration: none;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 7px; /* optional spacing between buttons */
-    padding: 5px 10px;
-}
-.button_class{
-    display:flex;
-}
