--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background: #fbf3ff;
+}
+
 .container {
     position: absolute;
     max-width: 800px;
