--- a/templates/barterpage.html
+++ b/templates/barterpage.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>BarterPage</title>
+    <title>Login Form Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="/static/css/barterpage.css">
+    <link rel="stylesheet" href="/static/css/addproduct.css">
     
 </head>
 
@@ -24,12 +24,20 @@
       <ul>
   
         <li id="a1"><b>CDSLite</b></li>
-        <li id="a2"></li>
-        <li id="a3"><a href="{{ url_for('index') }}">Bid</a></li>
-        <li id="a3"><a href="{{ url_for('Barter') }}">Barter</a></li>
-        <li id="a3"><a href="merchandise.html">Merchandise</a></li>
-        <li id="a3"><a href="/index/shopping_cart"><img src="/static/image/cart.png" alt=""></a></li>
-        <li id="a3">
+        <li id="a2">
+          <form>
+              <input type="text" class="search-box" placeholder="Search products">
+              <button id="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                  </svg>
+              </button>
+          </form>
+          </li>
+          <li id="a3"><a href="{{ url_for('index') }}">Bid</a></li>
+          <li id="a3"><a href="{{ url_for('Barter') }}">Barter</a></li>
+          <li id="a3"><a href="merchandise.html">Merchandise</a></li>
+          <li id="a3"><a href="/index/shopping_cart"><img src="/static/image/cart.png" alt=""></a></li>
+          <li id="a3">
               <div class="profile_dropdown">
                   <button class="profile"><img src="/static/image/user.png" alt=""></button>
                   <div class="profile-content">
